[package]
name = "tds"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env = "1.0.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde_json = "1.0.140"
tokio =  { version = "1.46.1", features = ["full"] }

